--- a/app/src/main/res/values/typo_styles.xml
+++ b/app/src/main/res/values/typo_styles.xml
@@ -10,6 +10,8 @@
 
         <item name="android:textSize">@dimen/sp_108</item>
     </style>
+
+
     <style name="Typo.Jl.cardTitle" parent="TextAppearance.AppCompat.Medium">
 <!--        <item name="fontFamily">@font/josefin_sans_regular</item>-->
 <!--        <item name="android:fontWeight">400</item>-->
@@ -34,5 +36,7 @@
     <style name="Typo.Jl.BodyLarge" parent="TextAppearance.Material3.BodyLarge">
 <!--        <item name="fontFamily">@font/jost_regular</item>-->
     </style>
-
+    <style name="Typo.Jl.BodyMedium" parent="TextAppearance.Material3.BodyMedium">
+        <!--        <item name="fontFamily">@font/jost_regular</item>-->
+    </style>
 </resources>
