--- a/app/src/main/res/layout/nav_cure_fragment.xml
+++ b/app/src/main/res/layout/nav_cure_fragment.xml
@@ -5,55 +5,143 @@
 
     <data>
 
+        <import type="com.taru.R" />
+
         <import type="android.view.View" />
+
         <variable
             name="bViewModel"
             type="com.taru.ui.pages.nav.cure.NavCureViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="?colorSurface">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:elevation="@dimen/dp_0">
+
             <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="Taru"
-                android:id="@+id/topAppBar"
-                app:titleCentered="true"
                 app:logo="@drawable/ic_logo_taru"
-                app:menu="@menu/menu_app"/>
+                app:titleCentered="true" />
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <View android:layout_height="0dp"
-        android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.6"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/taru_green_30"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:paddingBottom="@dimen/dp_104">
 
-    <View android:layout_height="match_parent"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/taru_green_10"/>
+                <TextView
+                    android:id="@+id/nav_cure_fragment_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:text="We are working on this section."
+                    android:textAppearance="@style/Typo.Jl.Title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/nav_cure_fragment_illustration"
+                    android:layout_width="@dimen/dp_128"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_title"
+                    app:srcCompat="@drawable/illustration_bomb" />
+
+
+                <TextView
+                    android:id="@+id/nav_cure_fragment_subtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginHorizontal="@dimen/dp_32"
+                    android:layout_marginTop="@dimen/dp_24"
+                    android:text='For now, check out some of the important links.'
+                    android:textAppearance="@style/Typo.Jl.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_illustration" />
+
+
+                <include
+                    android:id="@+id/nav_cure_fragment_guidance1"
+                    layout="@layout/cure_guidance_item"
+android:layout_marginTop="@dimen/dp_32"
+                    android:layout_marginHorizontal="@dimen/dp_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:bModel="@{bViewModel.guidance1}"
+                    app:bOnClick="@{bViewModel.bAction}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_subtitle" />
+
+
+                <include
+                    android:id="@+id/nav_cure_fragment_guidance2"
+                    layout="@layout/cure_guidance_item"
+
+                    android:layout_marginHorizontal="@dimen/dp_24"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:bModel="@{bViewModel.guidance2}"
+                    app:bOnClick="@{bViewModel.bAction}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_guidance1" />
+
+
+                <include
+                    android:id="@+id/nav_cure_fragment_guidance3"
+                    layout="@layout/cure_guidance_item"
+                    android:layout_marginTop="@dimen/dp_20"
+
+                    android:layout_marginHorizontal="@dimen/dp_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:bModel="@{bViewModel.guidance3}"
+                    app:bOnClick="@{bViewModel.bAction}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_guidance2" />
+
+
+                <ImageView
+                    android:id="@+id/nav_cure_fragment_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:scaleType="fitCenter"
+                    app:bindCoilSrc="@{R.drawable.illu_agri}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_cure_fragment_guidance3"
+                    tools:src="@drawable/pic_tool_category" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
