--- a/app/src/main/res/layout/plant_detail_fragment.xml
+++ b/app/src/main/res/layout/plant_detail_fragment.xml
@@ -149,19 +149,19 @@
                     android:id="@+id/plant_detail_section_region_chip_group"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_12"
                     android:layout_marginHorizontal="@dimen/dp_24"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/plant_detail_section_region_title">
 
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Asia"
-                        app:chipBackgroundColor="#FFCCC5"
-                        style="@style/Widget.Jl.App.Chip.Plain"/>
+<!--                    <com.google.android.material.chip.Chip-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Asia"-->
+<!--                        app:chipBackgroundColor="#FFCCC5"-->
+<!--                        style="@style/Widget.Jl.App.Chip.Plain"/>
 
-
-                    <com.google.android.material.chip.Chip
+<com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Africa"
@@ -174,6 +174,10 @@
                         android:text="Europe"
                         app:chipBackgroundColor="#E89BFC"
                         style="@style/Widget.Jl.App.Chip.Plain"/>
+-->
+
+
+
 
                 </com.google.android.material.chip.ChipGroup>
                 <!--                todo work here -->
