--- a/app/src/main/res/layout/nav_plants_item.xml
+++ b/app/src/main/res/layout/nav_plants_item.xml
@@ -6,6 +6,9 @@
     <data>
 
         <import type="android.view.View" />
+        <variable
+            name="bModel"
+            type="com.taru.data.local.db.plant.PlantEntity" />
 
         <variable
             name="bOnClick"
@@ -28,7 +31,7 @@
     <View android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="1.0"
-        android:id="@+id/home_category_item_image_area"
+        android:id="@+id/nav_plants_item_image_area"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +49,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="16:14"
         android:id="@+id/nav_plants_recent_item_image"
+        app:bindCoilSrc="@{bModel.imageUrl}"
+
 
         app:shapeAppearanceOverlay="@style/Jl.App.ShapeAppearanceOverlay.24"
         tools:src="@drawable/pic_tool_category"
@@ -58,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Radish"
-        android:text="Radish"
+        android:text="@{bModel.commonName}"
         android:gravity="center_horizontal"
         android:textColor="@color/colorOnSurface"
         android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
@@ -74,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Radish"
-        android:text="Radish"
+        android:text="@{bModel.familyName}"
         android:gravity="center_horizontal"
         android:textColor="@color/color_on_surface_54"
         android:textAppearance="@style/TextAppearance.Material3.BodySmall"
