--- a/app/src/main/res/drawable/ic_logo_taru.xml
+++ b/app/src/main/res/drawable/ic_logo_taru.xml
@@ -1,26 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="42dp"
-    android:height="42dp"
-    android:viewportWidth="42"
-    android:viewportHeight="42">
-  <path
-      android:pathData="M21.656,37.078H23.625C23.799,37.078 23.966,37.147 24.089,37.27C24.212,37.393 24.281,37.56 24.281,37.734C24.281,37.908 24.212,38.075 24.089,38.198C23.966,38.321 23.799,38.391 23.625,38.391H18.375C18.201,38.391 18.034,38.321 17.911,38.198C17.788,38.075 17.719,37.908 17.719,37.734C17.719,37.56 17.788,37.393 17.911,37.27C18.034,37.147 18.201,37.078 18.375,37.078H20.344V33.141C20.78,33.185 21.22,33.185 21.656,33.141V37.078Z"
-      android:fillColor="#1F1712"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M12.647,7.069C14.863,4.854 17.867,3.609 21,3.609C24.127,3.609 27.127,4.849 29.341,7.058C31.556,9.266 32.804,12.262 32.813,15.389C32.813,21.728 27.871,31.139 21.656,31.795V20.948L26.834,15.894C26.959,15.773 27.031,15.606 27.034,15.431C27.036,15.256 26.969,15.088 26.847,14.962C26.725,14.837 26.559,14.765 26.384,14.763C26.209,14.76 26.041,14.828 25.915,14.949L21.656,19.11V15.422C21.656,15.248 21.587,15.081 21.464,14.958C21.341,14.835 21.174,14.766 21,14.766C20.826,14.766 20.659,14.835 20.536,14.958C20.413,15.081 20.344,15.248 20.344,15.422V19.11L16.085,14.949C15.959,14.828 15.791,14.76 15.616,14.763C15.441,14.765 15.275,14.837 15.153,14.962C15.031,15.088 14.964,15.256 14.966,15.431C14.969,15.606 15.041,15.773 15.166,15.894L20.344,20.948V31.828C14.129,31.172 9.188,21.728 9.188,15.422C9.188,12.289 10.432,9.284 12.647,7.069Z"
-      android:fillType="evenOdd">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startX="21"
-          android:startY="3.609"
-          android:endX="21"
-          android:endY="31.828"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF7DFF82"/>
-        <item android:offset="1" android:color="#FF30AC70"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+<vector android:height="32dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="32dp"
+    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillType="evenOdd" android:pathData="M256,21.48C202.35,21.48 150.9,40.64 112.96,74.74C75.02,108.84 53.71,155.09 53.71,203.32C53.71,299.67 137.07,443.58 242.38,455.61C246.97,456.2 251.64,456.5 256.37,456.5C269.05,456.5 281.3,454.33 292.9,450.27C386.96,421.85 458.29,292.4 458.29,202.81C458.15,154.67 436.77,108.55 398.85,74.56C360.92,40.57 309.55,21.48 256,21.48Z">
+        <aapt:attr name="android:fillColor">
+            <gradient android:endX="256" android:endY="456.5"
+                android:startX="256" android:startY="21.48" android:type="linear">
+                <item android:color="#FF60F589" android:offset="0"/>
+                <item android:color="#FF16BA30" android:offset="1"/>
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:fillColor="#4B2A0C" android:pathData="M200.07,264.29C198.27,244.6 185.74,216.85 170.53,207.01C160.45,200.48 165.65,185.05 170.53,187.31C183.5,193.34 193.34,207.01 197.82,209.46C209.6,215.9 202.43,130.71 204.54,120.18C207.23,106.75 228.71,86.17 228.71,106.75C224.23,230.28 209.91,455.84 225.13,479.12C231.57,488.96 198.73,489.74 189.32,488.96C182.16,488.37 205.88,328.3 200.07,264.29Z"/>
+    <path android:fillColor="#775226" android:pathData="M290.47,305.47C290.47,241.02 330.3,215.72 368.78,213.04C381.6,212.14 408.17,162.31 393.85,163.8C355.36,167.82 329.86,172.99 303,197.16C289.64,209.19 288.23,144.96 288.23,130.68C288.23,99.36 232.73,73.4 232.73,93.99C233.92,219.6 211.7,461.4 233.18,484.49C239.89,491.7 302.89,492.74 307.48,484.49C317.32,466.77 290.47,388.83 290.47,305.47Z"/>
 </vector>
